@@ -220,7 +220,7 @@ cache cache_{{ conf.id }}
     # Return gateway timeout in case of authentication check failure
     http-request deny deny_status 504 if workflow_{{workflow.id}}_host workflow_{{workflow.id}}_dir request_has_authent !{ var(req.session.check_ok) -m found }
     # Deny access in case of header authentication failure (through 'Authentication' or 'X-Vlt-Token' headers)
-    http-request deny deny_status 403 if workflow_{{workflow.id}}_host workflow_{{workflow.id}}_dir header_has_authent !{ var(req.session.authorized) -m bool } !{ var(req.use_portal) -m found } !auth_redirect_{{workflow.id}}
+    http-request deny deny_status 401 hdr WWW-Authenticate "Bearer realm=\"{{workflow.fqdn}}\"" if workflow_{{workflow.id}}_host workflow_{{workflow.id}}_dir header_has_authent !{ var(req.session.authorized) -m bool } !{ var(req.use_portal) -m found } !auth_redirect_{{workflow.id}}
     {%- endif %}
     {%- if workflow.access_controls_302|length -%}
     ### 302 redirects ###
