@@ -11,6 +11,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Changed
 - [LOGGING] [PF] Don't send PF logs to mongodb anymore, log to /var/log/pf/parsed.log instead
 - [PKG_UPGRADE] Better filtering of update scripts' folders during upgrades
+- [PORTAL] Return a 401 instead of a 403 when refusing a header-authenticated request
 
 
 ## [2.4.0] - 2023-02-16
